# krafted-back

./: .env  .env.example  .env.prod  AGENTS.md  Cargo.toml  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  ENVIRONMENT.md  PLAN.md  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  seed_listings.sql
.github/workflows/: docker-publish.yml
migrations/2026-06-06-181729-0000_create_favorites/: up.sql
migrations/20260530000000_create_users/: up.sql
migrations/20260530140000_create_sessions/: up.sql
migrations/20260530150000_create_rbac/: down.sql  up.sql
migrations/20260530160000_create_categories/: up.sql
migrations/20260530170000_create_listings/: up.sql
migrations/20260530180000_seed_categories/: down.sql  up.sql
migrations/20260602000000_create_listing_images/: up.sql
migrations/20260607100000_create_favorites/: up.sql
plan/: M10_LISTINGS_PORTS_REPOSITORIES.md  M10_LISTINGS_SERVICE.md  M10_LISTING_IMAGE_UPLOAD.md  M11_LISTINGS_CONTROLLERS.md  M11_LISTINGS_SERVICE.md  M11_USER_MANAGEMENT_API.md  M12_ADMIN_SEED_RBAC_ENDPOINTS.md  M12_AUTHORIZATION_LOGIC_RBAC.md  M12_AUTH_MIDDLEWARE.md  M12_LISTINGS_CONTROLLERS.md  M13_ADMIN_SEED_RBAC_ENDPOINTS.md  M13_AUTH_MIDDLEWARE.md  M14_ADMIN_SEED_RBAC_ENDPOINTS.md  M14_TESTING_DOCUMENTATION.md  M15_TESTING_DOCUMENTATION.md  M1_PROJECT_SCAFFOLDING_CORE_ARCHITECTURE.md  M2_DATABASE_REPOSITORY_LAYER.md  M3_LOCAL_AUTH_IMPLEMENTATION.md  M4_SERVICE_LAYER_BUSINESS_LOGIC.md  M5_CONTROLLER_LAYER_HTTP_API.md  M6_LISTINGS_MIGRATIONS_MODELS.md  M6_USER_MANAGEMENT_API.md  M7.1_ADMIN_SEED_RBAC_ENDPOINTS.md  M7_AUTHORIZATION_LOGIC_RBAC.md  M7_LISTINGS_PORTS_REPOSITORIES.md  M8_LISTINGS_MIGRATIONS_MODELS.md  M8_LISTINGS_SERVICE.md  M8_TESTING_DOCUMENTATION.md  M9_LISTINGS_CONTROLLERS.md  M9_LISTINGS_MIGRATIONS_MODELS.md  M9_LISTINGS_PORTS_REPOSITORIES.md
scripts/: pre-commit.sh  seed_mock_data.sql
src/: api_doc.rs  lib.rs  main.rs  router.rs  schema.rs  state.rs
tests/: auth_e2e.rs  auth_service.rs  auth_service_integration.rs  favorites_controller.rs  favorites_repository.rs  listing_controller.rs  listing_repository.rs  password_reset_repository.rs  rbac_repository.rs  rbac_service.rs  session_repository.rs  user_controller.rs  user_repository.rs  user_service.rs
(+45 files in other folders)
