[package]
name = "krafted-back"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version = "2", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
dotenvy = "0.15"
envy = "0.4"
thiserror = "1"
reqwest = { version = "0.12", features = ["json"] }
jsonwebtoken = "9"
async-trait = "0.1"
mockall = "0.12"
utoipa = "5"
utoipa-swagger-ui = { version = "8", features = ["axum"] }

[dev-dependencies]
tokio-test = "0.4"
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["postgres"] }
tower = "0.5"